<resources>

    <string name="app_name">NFC_CHECK</string>


    <!-- TimeTable Layout -->
    <string name="week_mon">Mon</string>
    <string name="week_tue">Tue</string>
    <string name="week_wed">Wed</string>
    <string name="week_thu">Thu</string>
    <string name="week_fri">Fri</string>
    <string name="week_sat">Sat</string>

    <string name="db_failure">서버 통신에 실패하였습니다.</string>

    <string name="time">누적시간 </string>

    <!-- NFC Activity -->
    <string name="hello_nfc_please_touch_a_tag">hello ! Nfc Please touch a tag</string>
</resources>
