<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TimeTableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="#999999"
            android:padding="1dp"
            android:stretchColumns="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--  Week Row  -->
            <TableRow>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_mon"/>

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_tue" />

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_wed" />

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_thu" />

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_fri" />

                <TextView
                    style="@style/Custom_TextView"
                    android:text="@string/week_sat" />
            </TableRow>

            <!--  9 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="9"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>
            </TableRow>

            <!--  10 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="10"/>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"/>
            </TableRow>

            <!--  11 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="11" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  12 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="12"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"/>
            </TableRow>

            <!--  13 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="13" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView"/>

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  14 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="14" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  15 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="15" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  16 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="16" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  17 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="17" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>


            <!--  18 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="18" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  19 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="19" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  20 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="20" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  21 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="21" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

            <!--  22 O'Clock Row  -->
            <TableRow>

                <TextView
                    style="@style/Clock_CustomTextView"
                    android:text="22" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />

                <TextView
                    style="@style/Custom_TextView" />
            </TableRow>

        </TableLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnFAB"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="#FFFFFF"
            android:src="@mipmap/ic_add_second"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="2dp"/>

    </LinearLayout>
</ScrollView>